# Hangman

./: CMakeLists.txt  LICENSE  README.md
src/: data.csv  main.cpp
